@@ -1,5 +1,5 @@
-<!ENTITY version "SVN-20130122">
-<!ENTITY releasedate "January 22, 2013">
+<!ENTITY version "SVN-20130124">
+<!ENTITY releasedate "January 24, 2013">
 <!ENTITY copyrightdate "1999-2013"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone "7.3">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
