@@ -1,3 +1,9 @@
+2013-01-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Remove local attribue of some variables for Bourne
+     shell compatability
+   * Specify /bin/echo in commands with -e switch for 
+     Bourne shell compatability
+
 2012-10-13 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Remove unneeded sleep in killproc
    * Add option for verbose fsck
